[package]
name = "roguelike"
version = "0.1.0"
authors = ["dannydenenberg <dannydenenberg@gmail.com>"]
edition = "2018"

[dependencies]
#tcod = "0.12"
tcod = { git = "https://github.com/rjungemann/tcod-rs.git", branch = "fix-sdl2-rendering-mojave" }
# serde = "1.0.90"
# serde_derive = "1.0.90"
# serde_json = "1.0.39"
# rand = "0.6.5"
rand = "0.3.9"
